--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <canvas id="game" width="300" height="600" aria-label="Área do jogo"></canvas>
         <div id="game-over" aria-hidden="true">
           <h1>GAME OVER</h1>
-          <p>Pressione <strong>R</strong> para reiniciar</p>
+          <p>Press <strong>R</strong> para reiniciar</p>
         </div>
       </div>
 
@@ -107,11 +107,11 @@
       <p class="dadosconfig1">Desenvolvido por:
         <a href="https://github.com/0001143306-web" target="_blank" rel="noopener noreferrer">Bernardo Barroso,</a>
         <a href="https://github.com/fegaspar0706" target="_blank" rel="noopener noreferrer">Felipe Gaspar,</a>
-        <a href="https://github.com/0001141792-arch" target="_blank" rel="noopener noreferrer">Isaque Amancio,</a>
+        <a href="https://github.com/0001143306-web" target="_blank" rel="noopener noreferrer">Isaque Amancio,</a>
         <a href="https://github.com/Sirplehe" target="_blank" rel="noopener noreferrer">Victor Hugo Rodrigues,</a>
         <a href="https://github.com/0001181015-a11y" target="_blank" rel="noopener noreferrer">Maria Clara Guide,</a>
-        <a href="https://github.com/" target="_blank" rel="noopener noreferrer">Stefane Beatriz</a>
-        e <a href="https://github.com/" target="_blank" rel="noopener noreferrer">Gabriel Marques</a>
+        <a href="https://github.com/0001143306-web" target="_blank" rel="noopener noreferrer">Stefane Beatriz</a>
+        e <a href="https://github.com/0001143306-web" target="_blank" rel="noopener noreferrer">Gabriel Marques</a>
       </p>
 
       <p class="dadosconfig1">Link do projeto no GitHub: <a href="https://github.com/0001143306-web/Trontris" target="_blank" rel="noopener noreferrer">Clique aqui!</a></p>
@@ -121,10 +121,8 @@
   <audio id="bg-music" loop preload="auto">
     <source src="audio/dark-synthwave-strange-time-317273.mp3" type="audio/mpeg">
   </audio>
+<img id="pause-creature" src="https://i.postimg.cc/wvrhs8r7/1052.pngp" style="display:none;">
 
   <script src="script.js"></script>
 </body>
 </html>
-
-
-
